--- a/CreationKitPrefs.ini
+++ b/CreationKitPrefs.ini
@@ -120,16 +120,16 @@ iPickingPreferencesX=1366
 sPaletteFileName=
 bEnableDialogueExportLogging=0
 Object Category WorldObjects=2
-Object Selection=46
+Object Selection=68
 Cell View X=1979
 Cell View Y=314
 Cell View W=648
 Cell View H=508
 Object Category Miscellaneous=2
-Object Category Character=2
+Object Category Character=1
 Object Type Quest=2
 Object Type Quest Faction=2
-Form dialog tab 77=5
+Form dialog tab 77=4
 Quest Window X=1381
 Quest Window Y=-54
 Quest Window W=1249
@@ -287,14 +287,14 @@ Cell View Object List Column 8 width=32
 Num Object Windows=1
 ObjectWindow X=1388
 ObjectWindow Y=-97
-ObjectWindow W=646
+ObjectWindow W=817
 ObjectWindow H=898
 WarningsLayout=
 Warnings Dialog X=1416
 Warnings Dialog Y=-27
 Warnings Dialog W=743
 Warnings Dialog H=529
-Object Category Actors=2
+Object Category Actors=1
 Object Type Actor=2
 Object Type Package=1
 Form dialog tab 79=4
@@ -315,6 +315,8 @@ Papyrus Script Pick Window X=1552
 Papyrus Script Pick Window Y=-54
 Papyrus Script Pick Window W=490
 Papyrus Script Pick Window H=343
+Object Type Ammo=1
+Object Category Audio=2
 [MAIN]
 fSkyCellRefFadeDistance=150000.0000
 bGamepadEnable=0
