correções e script de build

--- a/CreationKitPrefs.ini
+++ b/CreationKitPrefs.ini
@@ -73,7 +73,7 @@ uLargeRefLODGridSize=9
 bLoadTheUserPlugin=0
 sLastTexturePath=Data\Textures\
 sLastModelPath=Data\Meshes\
-sFile Path=
+sFile Path=C:\Program Files (x86)\Steam\steamapps\common\Skyrim Special Edition\
 bLight Radius=0
 bMaximize Editor=1
 bViewSky=0
@@ -317,6 +317,7 @@ Papyrus Script Pick Window W=490
 Papyrus Script Pick Window H=343
 Object Type Ammo=1
 Object Category Audio=2
+Form dialog tab 116=0
 [MAIN]
 fSkyCellRefFadeDistance=150000.0000
 bGamepadEnable=0
